<resources>
    <string name="app_name">WallpaperStack</string>
    <string name="category_hot">Hot</string>
    <string name="category_latest">Latest</string>
    <string name="category_relevance">Relevance</string>
    <string name="category_random">Random</string>
    <string name="category_favorite">Favorite</string>
    <string name="category_views">Views</string>
    <string name="category_date_add">Newest</string>
    <string name="search_hint">Search</string>
    <string name="count_results">Wallpapers %d</string>
</resources>