<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@+id/swipeToRefreshLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/home_background"
    android:orientation="vertical"
    tools:context=".presentation.HomeFragment">


    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <HorizontalScrollView
            android:id="@+id/swSortButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="12dp"
            android:scrollbars="none"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp">

                <TextView
                    android:id="@+id/hot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/rounded_corner"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:scrollHorizontally="true"
                    android:text="@string/category_hot"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/relevance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/rounded_corner"
                    android:paddingHorizontal="8dp"
                    android:scrollHorizontally="true"
                    android:text="@string/category_relevance"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/rounded_corner"
                    android:paddingHorizontal="8dp"
                    android:scrollHorizontally="true"
                    android:text="@string/category_favorite"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/random"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/rounded_corner"
                    android:paddingHorizontal="8dp"
                    android:scrollHorizontally="true"
                    android:text="@string/category_random"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/rounded_corner"
                    android:paddingHorizontal="8dp"
                    android:scrollHorizontally="true"
                    android:text="@string/category_views"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible"
            tools:visibility="visible">

            <EditText
                android:id="@+id/etSearchQuery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:gravity="center"
                android:hint="text input"
                android:inputType="text" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="search" />

            <TextView
                android:id="@+id/testSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                tools:text="test"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWallpapers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:saveEnabled="true"
            tools:itemCount="4"
            tools:listitem="@layout/item_wallpaper"
            android:visibility="gone"
            tools:visibility="visible"/>

    </LinearLayout>


        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:shimmer_base_color="@color/shimmer_background"
            app:shimmer_colored="true"
            app:shimmer_base_alpha="1"
            app:shimmer_highlight_color="@color/shimmer_animation"
            tools:visibility="gone">

            <include layout="@layout/skeleton_layout" />

        </com.facebook.shimmer.ShimmerFrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/connectionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="48dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        app:cardCornerRadius="25dp"
        app:strokeWidth="0dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvConnectionState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="4dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>